--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kairos-marketing-site",
+  "name": "kairos-public-site",
   "version": "0.1.0",
   "private": true,
   "type": "module",
